Fix scroll in Clock activity on small screens

--- a/activities/Clock.activity/css/activity.css
+++ b/activities/Clock.activity/css/activity.css
@@ -14,6 +14,11 @@ canvas {
   top: 0;
 }
 
+#canvas {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 #text-time {
   font-family: monospace;
   font-size: 35px;
